# chip8-emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Emulator.h  Operations.h  resource.h
resources/: chip8.rc  chip8.xaml
src/: Emulator.cpp  Operations.cpp  Window.cpp
